# Golang-Quant-ML-Trading-Platform

./: .env.example  .gitignore  BUGFIX_MT5_CENT_ACCOUNT.md  BUGFIX_SYNC_DUPLICATE_FILES.md  DATABASE_SETUP.md  DEVELOPMENT_PLAN.md  NEWS_API_DOCS.md  QUICK_START.md  README.md  REALTIME_CHART_PHASE1_COMPLETE.md  REALTIME_CHART_PHASE2_COMPLETE.md  REALTIME_CHART_PHASE3_COMPLETE.md  REALTIME_CHART_PLAN.md  Untitled-1.txt  api_response.json  check_sync_versions.py  clear_cache.py  debug_yfinance.py  docker-compose.yml  quant.drawio  setup_env.bat  simple_trading_platform_plan.md  start_app.bat  start_finnhub.sh  start_go.bat  start_macos.sh  start_rust.bat  start_twelve.sh  start_windows.bat  start_windows_yahoo.bat  stop_macos.sh
golang_backend/: .gitignore  Dockerfile  Makefile  sqlc.yaml
tests/: test_historical_signals.py
trading_api/: ai_service.py  analysis.py  analyze_db.py  analyze_integrity.py  cache.py  chart_patterns.py  charting.py  check_delay.py  checklist_manager.py  clean_1h_data.py  clean_db.py  config.py  data_loader.py  data_manager.py  db_manager.py  db_schema.sql  debug_news.py  endpoint_single_tf.py  fvg_detection.py  go_client.py  journal_manager.py  main.py  news_manager.py  reference_api.py  reference_indicators.py  requirements.txt  reset_all_data.py  risk_management.py  risk_manager.py  rust_client.py  setup_db.py  sr_zones.py  test_db.py  test_mt5.py  test_rust.py  test_speed.py  trading_config.yaml  (+3 more)
trading_api/rust_analysis/: .gitignore  Cargo.toml
trading_api/rust_analysis/src/: indicators.rs  main.rs  patterns.rs  smc.rs  sr_zones.rs
(+87 files in other folders)
